syntax = "proto3";

package ocf.cloud.grpcgateway.pb;

import "github.com/plgd-dev/cloud/resource-aggregate/pb/commands.proto";


option go_package = "github.com/plgd-dev/cloud/grpc-gateway/pb;pb";

message GetDevicesMetadataRequest{
    repeated string device_id_filter = 1;
    repeated string type_filter = 2;
}